--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="weather-alert"></div>
-            <img src="https://dummyimage.com/60x60/fff/aaa" alt="Provo Chamber of Commerce logo">
+            <img src="images/logo.png" alt="Provo Chamber of Commerce logo" class="logo">
             <nav class="navigation">
                 <ul>
                     <li><img src="images/hamburger.png" alt="menu" class="hamburger"></li>
