fixed some design errors

--- a/contact.html
+++ b/contact.html
@@ -56,25 +56,33 @@
             <div class="current-leadership">
                 <h2>Board of Directors</h2>
                 <div class="leader-profile">
-                    <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    <div class="profile-img">
+                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    </div>
                     <h3>Name</h3>
                     <h4>Title</h4>
                     <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
                 </div>
                 <div class="leader-profile">
-                    <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    <div class="profile-img">
+                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    </div>
                     <h3>Name</h3>
                     <h4>Title</h4>
                     <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
                 </div>
                 <div class="leader-profile">
-                    <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    <div class="profile-img">
+                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    </div>
                     <h3>Name</h3>
                     <h4>Title</h4>
                     <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
                 </div>
                 <div class="leader-profile">
-                    <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    <div class="profile-img">
+                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                    </div>
                     <h3>Name</h3>
                     <h4>Title</h4>
                     <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
