--- a/aboutUs.html
+++ b/aboutUs.html
@@ -41,53 +41,79 @@
                 <h2>Our History</h2>
                 <div class="timeline">
                     <div class="container left">
-                        <h3>1300</h3>
-                        <p>Ute tribes first settle in Utah Valley</p>
+                        <div class="content">    
+                            <img src="images/utes.jpg" alt="two ute native americas">
+                            <h3>1300</h3>
+                            <p>Ute tribes first settle in Utah Valley</p>
+                        </div>
                     </div>
                     <div class="container right">
-                        <h3>1847</h3>
-                        <p>Pioneers from the Church of Jesus Christ of Latter-day Saints become the first european settlers</p>
+                        <div class="content"> 
+                            <img src="images/pioneer.jpg" alt="handcart pioneers">
+                            <h3>1847</h3>
+                            <p>Pioneers from the Church of Jesus Christ of Latter-day Saints become the first european settlers</p>
+                        </div>
                     </div>
                     <div class="container left">
-                        <h3>1851</h3>
-                        <p>City Charter is Granted</p>
+                        <div class="content">
+                            <img src="images/courthouse.jpg" alt="Utah County Courthouse">
+                            <h3>1851</h3>
+                            <p>City Charter is Granted</p>
+                        </div>
                     </div>
                     <div class="container right">
-                        <h3>1875</h3>
-                        <p>Brigham Young Academy- Later Brigham Young University- is established</p>
+                        <div class="content">
+                            <img src="images/bya.jpg" alt="Brigham Young Academy">
+                            <h3>1875</h3>
+                            <p>Brigham Young Academy- Later Brigham Young University- is established</p>
+                        </div>
                     </div>
                     <div class="container left">
-                        <h3>2016</h3>
-                        <p>Provo City Center Temple is dedicated</p>
+                        <div class="content">
+                            <img src="images/temple.jpg" alt="Provo City Center Temple">
+                            <h3>2016</h3>
+                            <p>Provo City Center Temple is dedicated</p>
+                        </div>
                     </div>
                     <div class="container right">
-                        <h3>2021</h3>
-                        <p>Provo City Chamber of Commerce is established</p>
+                        <div class="content">
+                            <img src="images/logo.png" alt="PCCC Logo">
+                            <h3>2021</h3>
+                            <p>Provo City Chamber of Commerce is established</p>
+                        </div>
                     </div>  
                 </div>
             </div>
             <div class="current-leadership">
                 <h2>Current Leadership</h2>
                 <div class="leader-profile">
-                    <img src="images/mayor.jpg" alt="Michelle Kaufusi">
+                    <div class="profile-img">
+                        <img src="images/mayor.jpg" alt="Michelle Kaufusi">
+                    </div>
                     <h3>Michelle Kaufusi</h3>
                     <h4>Mayor</h4>
                     <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
                 </div>
                 <div class="leader-profile">
-                    <img src="images/sewell.png" alt="Dave Sewell">
+                    <div class="profile-img">
+                        <img src="images/sewell.png" alt="Dave Sewell">
+                    </div>
                     <h3>Dave Sewell</h3>
                     <h4>City Council Member</h4>
                     <p>Dave Sewell was elected in 2013 and re-elected in 2017 to one of the citywide Council seats. He has a background in computer science and business.  He and his wife have lived in Provo since the 1970s. Dave has served his community as a Neighborhood Vice Chair where he helped neighbors stay informed about community issues facing the Council and Planning Commission. </p>
                 </div>
                 <div class="leader-profile">
-                    <img src="images/shipley.png" alt="David Shipley">
+                    <div class="profile-img">
+                        <img src="images/shipley.png" alt="David Shipley">
+                    </div>
                     <h3>David Shipley</h3>
                     <h4>City Council Member</h4>
                     <p>David Shipley works for Zions Wealth Advisors as a financial planner with the bank's most affluent clients. In addition to his day job in planning the past 16 years, he also taught finance classes as an adjunct professor. David and his wife Tawni live with their two teenage daughters on the west side of Provo. He enjoys frequently hiking the Y. He is the City-Wide District II representative, elected in 2019.</p>
                 </div>
                 <div class="leader-profile">
-                    <img src="images/handley.png" alt="George Handley">
+                    <div class="profile-img">
+                        <img src="images/handley.png" alt="George Handley">
+                    </div>
                     <h3>George Handley</h3>
                     <h4>City Council Member</h4>
                     <p>George Handley was elected in 2017 and represents District 2. George moved to Provo in 1998, where he and his wife have raised their four children. He is an educator and author who has been civically engaged for many years.</p>
