--- a/contact.html
+++ b/contact.html
@@ -57,57 +57,60 @@
                 <h2>Board of Directors</h2>
                 <div class="leader-profile">
                     <div class="profile-img">
-                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                        <img src="https://placebeard.it/300x300" alt="Board of Director member">
                     </div>
-                    <h3>Name</h3>
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
+                    <h3>George Georgeson</h3>
+                    <h4>President</h4>
                 </div>
                 <div class="leader-profile">
                     <div class="profile-img">
-                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                        <img src="https://placebeard.it/300x300" alt="Board of Director member">
                     </div>
-                    <h3>Name</h3>
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
+                    <h3>John Johnson</h3>
+                    <h4>Vice President</h4>
                 </div>
                 <div class="leader-profile">
                     <div class="profile-img">
-                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                        <img src="https://placebeard.it/300x300" alt="Board of Director member">
                     </div>
-                    <h3>Name</h3>
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
+                    <h3>Anders Anderson</h3>
+                    <h4>Secretary</h4>
                 </div>
                 <div class="leader-profile">
                     <div class="profile-img">
-                        <img src="https://dummyimage.com/300x300/fff/aaa" alt="">
+                        <img src="https://placebeard.it/300x300" alt="Board of Director member">
                     </div>
-                    <h3>Name</h3>
-                    <h4>Title</h4>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam</p>
+                    <h3>Robert Robertson</h3>
+                    <h4>Treasurer</h4>
                 </div>
 
         </main>
         <footer>
             <div class="contact-info">
                 <div class="phone-email">
-                    <img src="https://dummyimage.com/50x50/fff/aaa" alt="">
+                    <img src="images/phone.png" alt="phone icon">
                     <span>(555) 555-5555</span>
-                    <img src="https://dummyimage.com/50x50/fff/aaa" alt="">
+                    <img src="images/email.png" alt="email icon">
                     <span>ContactUs@ProvoChamber.com</span>
                 </div>
                 <div class="socials">
-                    <img src="https://dummyimage.com/50x50/fff/aaa" alt="">
-                    <img src="https://dummyimage.com/50x50/fff/aaa" alt="">
-                    <img src="https://dummyimage.com/50x50/fff/aaa" alt="">
+                    <img src="images/facebook.png" alt="facebook icon">
+                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="images/twitter.png" alt="twitter icon">
                 </div>
             </div>
             <div class="weather">
-                <div class="current-weather"></div>
-                <div class="forecast"></div>
+                <div class="current-weather">
+                    <h3>Current Weather</h3>
+                </div>
+                <h3>3-Day Forecast</h3>
+                <div class="forecast">
+                    
+                </div>
             </div> 
-            </footer>
-            <script src="js/responsive-menu.js"></script>
+        </footer>
+        <script src="js/responsive-menu.js"></script>
+        <script src="js/weatherapi.js"></script>
+        
     </body>
 </html>
