Fixed directory js

--- a/join.html
+++ b/join.html
@@ -71,42 +71,42 @@
                             <td>$1000</td>
                         </tr>
                         <tr>
-                            <td>Perk 1:</td>
+                            <td>Directory Listing:</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                         </tr>
                         <tr>
-                            <td>Perk 2:</td>
+                            <td>Networking Events:</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                         </tr>
                         <tr>
-                            <td>Perk 3:</td>
+                            <td>Business Classes:</td>
                             <td>&nbsp;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                         </tr>
                         <tr>
-                            <td>Perk 4:</td>
+                            <td>Legal Aid:</td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td>&#10004;</td>
                             <td>&#10004;</td>
                         </tr>
                         <tr>
-                            <td>Perk 5:</td>
+                            <td>Social Media Adverts:</td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td>&#10004;</td>
                         </tr>
                         <tr>
-                            <td>Perk 6:</td>
+                            <td>Homepage Advert:</td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
